create logike the poset
